# suplex

./: LICENSE  README.md  TODO  dune-project  suplex-intrinsics.opam  suplex.opam
examples/: dotprod.ml  dune  matmul.ml
lib/: compile.ml  dune  function.ml  index.mld  intf.ml  lang.ml  lang.mli  llvmRepr.ml  llvm_impl.ml  run.ml  size.ml  size.mli  suplex.ml  suplex.mli  syntax.ml  syntax2.ml  type.ml  type_system.ml  types.ml  vec.ml
lib/config/: discover.ml
lib/libexternals/: Makefile  dune  externals.c
lib_intrinsics/: dune  suplex_intrinsics.ml  suplex_intrinsics.mli
lib_test/: .ocamlformat  dune  run_test.ml  test.ml  types_test.ml  unit_tests.ml
