(lang dune 2.8)
(name suplex)
(version 0.0.1)
(generate_opam_files true)
(source (uri git+https://github.com/igarnier/suplex))
(license MIT)
(authors "Ilias Garnier")
(maintainers igarnier@protonmail.com)
(package (name suplex)
  (synopsis "LLVM-backed typed eDSL for C-like programming in OCaml")
  (depends
    (ocaml (>= 5.2.0))
    (alcotest (and (>= 1.6.0) :with-test))
    (llvm (= 17.0.6))
    (ctypes (= 0.23.0))
    (ctypes-foreign (= 0.23.0))))
(bug_reports http://github.com/igarnier/suplex)
(homepage http://github.com/igarnier/suplex)
(documentation https://igarnier.github.io/suplex)
(use_standard_c_and_cxx_flags true)
