(data_only_dirs libexternals)

(rule
 (deps (source_tree libexternals))
 (targets libexternals.a dllexternals.so)
 (action
 (no-infer
  (progn
   (chdir libexternals (run make))
   (copy libexternals/externals.a libexternals.a)
   (copy libexternals/externals.so dllexternals.so)))))

(library
  (name suplex)
  (public_name suplex)
  (modes native)
  (libraries llvm llvm.executionengine llvm.analysis llvm.scalar_opts ctypes ctypes.foreign)
  (foreign_archives externals)
  (instrumentation (backend bisect_ppx))
  (ocamlopt_flags (-g -rectypes))
)

(documentation
   (package suplex)
   (mld_files index)
)