(data_only_dirs libexternals)

(rule
 (deps (source_tree libexternals))
 (targets libexternals.a dllexternals.so)
 (action
 (no-infer
  (progn
   (chdir libexternals (run make))
   (copy libexternals/externals.a libexternals.a)
   (copy libexternals/externals.so dllexternals.so)))))

(library
  (name suplex)
  (public_name suplex)
  (modes native)
  (libraries hmap llvm llvm.executionengine llvm.analysis llvm.all_backends llvm.target ctypes ctypes.foreign)
  (foreign_archives externals)
  (instrumentation (backend bisect_ppx))
  (ocamlopt_flags (-g))
)

(documentation
   (package suplex)
   (mld_files index)
)
